--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          # github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # branch: gh-pages
+          branch: dev
           folder: dist
